# librtc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  c-cpp.yml
example/: main.cpp  test.cpp  test1.cpp
src/: audio_capture_module.cpp  audio_capture_module.h  audio_device_module.cpp  audio_device_module.h  audio_track.cpp  audio_track.h  base.cpp  base.h  data_channel.cpp  data_channel.h  frame.cpp  frame.h  h264.cpp  h264.h  h264_decoder.cpp  h264_decoder.h  h264_encoder.cpp  h264_encoder.h  ice_candidate.cpp  ice_candidate.h  media_stream_track.cpp  media_stream_track.h  observer.cpp  observer.h  peer_connection.cpp  peer_connection.h  peer_connection_config.cpp  peer_connection_config.h  rtc.h  session_description.cpp  session_description.h  thread.cpp  thread.h  video_decoder.cpp  video_decoder.h  video_encoder.cpp  video_encoder.h  video_track.cpp  video_track.h
src/video/: h264_encoder.cpp  h264_encoder.h  video_encoder.cpp  video_encoder.h
